# naughty_factorio_data

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  bootstrap.lua  data_browser.cpp  data_dump.cpp  factorio_data.cpp  factorio_data.hpp  fobject.cpp  fobject.hpp  test.lua  ui.drawio  util.hpp  vm.cpp  vm.hpp
.github/workflows/: main.yml
nana/: CMakeLists.txt
src/: CMakeLists.txt  lstate.cpp  ltable.h  lua.h  override_printf.h
